# llmtre

./: .coveragerc  .gitignore  CHANGELOG.md  MANUAL_TEST_GUIDE.md  PLAY_GUIDE.md  PLAY_GUIDE_en.md  README.md  README_en.md  app.py  pyproject.toml  requirements.txt
.agent_context/: AGENTS.md  MEMORY.md  OPS.md  README.md
agents/: agent_context.py  clarifier_agent.py  evolution_agent.py  gm_agent.py  nlu_agent.py  nlu_schema.py
config/: __init__.py  agent_model_config.yml  agent_model_loader.py  main_loop_rules.json  mod_registry.yml  rag_config.yml  rag_import_rules.json
config/api/: openapi.yaml
core/: event_bus.py  runtime_logging.py
frontend/: a1_browser_smoke.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
game_workflows/: affordances.py  async_watchers.py  event_schemas.py  graph_schema.py  main_event_loop.py  main_loop_config.py  main_loop_outer_helpers.py  main_loop_persistence_helpers.py  main_loop_resolution_helpers.py  main_loop_scene_helpers.py  main_loop_validation_helpers.py  outer_loop_smoke.py  rag_readonly_bridge.py
mods/: __init__.py
mods/holy_mod/: __init__.py  mod_info.json
mods/vampire_mod/: __init__.py  mod_info.json
state/: __init__.py
state/contracts/: __init__.py  agent.py  scene.py  story_pack.py  turn.py
state/data/: entities.json  items.json
state/definitions/: action_schema.json  item_schema.json  location_schema.json  npc_schema.json  quest_schema.json
state/models/: action.py  base.py  entity.py  item.py  quest.py  timeline.py  world.py
state/tools/: db_initializer.py  generate_schemas.py  runtime_schema.py  state_mutators.py
static/: __init__.py  playground.css  playground.js
story_packs/demo_a2_core/: manifest.json
templates/: __init__.py  app_bootstrap.html  playground.html
tests/fixtures/: nlu_eval_cases.json
tests/test_agents/: test_agent_context.py  test_clarifier_agent_a1.py  test_gm_agent_a1.py  test_gm_context_prompt.py  test_nlu_llm_fallback_a1.py  test_nlu_priority_a1.py  test_nlu_schema_boundaries_a1.py  test_nlu_schema_eval.py
tests/test_contracts/: test_a1_scene_contracts.py  test_turn_contracts_a1.py
tests/test_packaging/: test_pyproject_packages_a1.py
tests/test_state/: test_contracts_a1.py  test_db_initializer_a1.py  test_db_initializer_and_updater_a1.py  test_generate_schemas_a1.py  test_models_a1.py  test_state_mutators_a1.py
tests/test_tools/: test_check_runtime_logs_a1.py  test_cli_tools_a1.py  test_dice_roller_a1.py  test_doc_importer_mod_manager_a1.py  test_entity_probes_a1.py  test_nlu_eval_check_a1.py  test_outbox_retry.py  test_quest_manager_a1.py  test_rag_builders_a1.py  test_rag_index_builder_a1.py  test_rag_manager_a1.py  test_rag_rrf_fusion_a1.py  test_rag_sql_router_a1.py  test_rag_unified_retriever_a1.py  test_replay_outer_outbox_a1.py  test_script_evaluator_a1.py  test_stage_d_acceptance_check_a1.py  test_story_pack_validator_a2.py
tests/test_web_api/: test_app_factory_a1.py  test_blueprints_boundaries_a1.py  test_health_playground_a1.py  test_sandbox_a1.py  test_service_and_blueprints_a1.py  test_session_store_idempotency.py  test_sessions_a2.py  test_story_packs_a2.py  test_turns_a1.py  test_turns_a2.py
tests/test_workflows/: test_a1_stable_loop.py  test_affordances_a1.py  test_async_watchers_bridge_a1.py  test_main_event_loop.py  test_main_loop_config_a1.py  test_main_loop_helpers_coverage_a1.py  test_outer_loop_bridge.py  test_outer_loop_smoke_a1.py  test_rag_readonly_bridge_a1.py
tools/: doc_importer.py  mod_manager.py
tools/entity/: entity_probes.py
tools/logs/: __init__.py  check_runtime_logs.py  nlu_eval_check.py  replay_outer_outbox.py  stage_d_acceptance_check.py
tools/packs/: __init__.py  registry.py  validate.py
tools/quest/: quest_manager.py
tools/rag/: __init__.py  index_builder.py  main_loop_rag_integration_check.py  main_loop_rag_smoke.py  unified_retriever.py
tools/roll/: dice_roller.py
tools/sandbox/: script_evaluator.py
tools/sqlite_db/: db_updater.py
tools/testing/: run_a1_coverage_gate.ps1
tre_doc/: README.md  TRE_子模块_agents.md  TRE_子模块_config.md  TRE_子模块_core.md  TRE_子模块_frontend.md  TRE_子模块_game_workflows.md  TRE_子模块_mods.md  TRE_子模块_state.md  TRE_子模块_story_packs.md  TRE_子模块_tools.md  TRE_子模块_web_api.md  TRE_模块架构.md
web_api/: __init__.py  service.py  session_store.py
web_api/blueprints/: __init__.py  health.py  memory.py  playground.py  runtime.py  sandbox.py  (+3 more)
(+27 files in other folders)
