[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tre"
version = "0.1.0"
description = "Text RPG Engine - Deterministic Logic First TRPG Framework"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "TRE Team"}
]
keywords = ["trpg", "rpg", "game-engine", "langgraph", "llm", "text-adventure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "flask>=3.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-readers-file>=0.6.0",
    "llama-parse>=0.6.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "docx2txt>=0.8",
    "xmltodict>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.0.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/iambupu/llmtre"
Documentation = "https://github.com/iambupu/llmtre/tree/main/.code_md"
Repository = "https://github.com/iambupu/llmtre"

[tool.setuptools.packages.find]
include = [
    "game_workflows*",
    "state*",
    "web_api*",
    "config*",
    "agents*",
    "tools*",
    "core*",
    "templates*",
    "static*",
]

[tool.setuptools.package-data]
config = ["*.yml", "*.json", "api/*.yaml"]
templates = ["*.html"]
static = ["*.js", "*.css"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["^tests/", "^build/", "^\\.pytest_wheelhouse/"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["llama_index.*", "llama_parse"]
ignore_missing_imports = true
